--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,25 @@
 ul {
   list-style-type:none;
 }
+
+mat-card{
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.samsung {
+  background-color: lightblue;
+}
+
+.apple {
+  background-color: whitesmoke;
+}
+
+.lg {
+  background-color: blanchedalmond;
+}
+
+.xiaomi {
+  background-color: lightyellow;
+}
